Fix overflow mobile issue

--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,11 @@ body {
     top: 0px;
     background-color: var(--bg);
     font-family: "Open Sans";
-    overflow-x: hidden;
     color: var(--primary-color);
+}
+
+#wrapper{
+    overflow-x: hidden;
 }
 
 h1 {
